--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -15,7 +15,6 @@
   &-container{
     &-full, &-half{
       width: 95vw;
-      @include center;
     }
 
   }
