--- a/sass/components/_media-queries.scss
+++ b/sass/components/_media-queries.scss
@@ -63,9 +63,7 @@
  }
  .members{
 
-  &-all{
-    width: 95%;
-  }
+
 
   }
   .settings{
