--- a/sass/components/_members&activity.scss
+++ b/sass/components/_members&activity.scss
@@ -22,9 +22,27 @@
     }
 
     &-text{
-        flex-grow: 1;
+         flex-grow: 1;
         padding: 10px 0;
         margin-left: 10px;
+        a{
+            /* These are technically the same, but use both */
+            overflow-wrap: break-word;
+            word-wrap: break-word;
+
+            -ms-word-break: break-all;
+            /* This is the dangerous one in WebKit, as it breaks things wherever */
+            word-break: break-all;
+            /* Instead use this non-standard one: */
+            word-break: break-word;
+
+            /* Adds a hyphen where the word breaks, if supported (No Blink) */
+            -ms-hyphens: auto;
+            -moz-hyphens: auto;
+            -webkit-hyphens: auto;
+            hyphens: auto;
+        }
+
     }
 
     &-date{
